--- a/app/views/messages/_edit_form.html.erb
+++ b/app/views/messages/_edit_form.html.erb
@@ -2,14 +2,14 @@
 <% team = topic.team %>
 
 <div id="<%= @pin ? "pinned_#{dom_id(message)}" : dom_id(message) %>" class="my-10">
-  <%= form_with(model: message, url: team_topic_message_path(team, topic, message), method: :put, data: { turbo_action: 'replace' }) do |form| %>
+  <%= form_with(model: message, url: team_topic_message_path(team, topic, message), method: :put, data: { controller: 'form-submit', form_submit_target: 'form' }) do |form| %>
     <div class="flex items-center justify-end gap-3">
       <%= link_to cancel_edit_team_topic_message_path(team, topic, message, pinned: @pin), data: { turbo_stream: true, turbo_frame: @pin ? "pinned_#{dom_id(message)}" : dom_id(message) }, class: 'btn btn-dark btn-muted p-2 ml-2 rounded-full grid place-items-center' do %>
         <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-6' %>
         <span class="sr-only">Cancel</span>
       <% end %>
 
-      <%= form.text_area :content, value: message.content, class: 'form-textarea grow rounded-t-2xl rounded-bl-2xl', autofocus: true, data: { controller: 'autogrow', action: 'input->autogrow#grow' } %>
+      <%= form.text_area :content, value: message.content, class: 'form-textarea grow rounded-t-2xl rounded-bl-2xl', autofocus: true, data: { controller: 'autogrow', form_submit_target: 'input', action: 'input->autogrow#grow keydown.ctrl+enter@window->form-submit#submit keydown.meta+enter@window->form-submit#submit' } %>
 
       <%= form.button type: 'submit', class: 'btn btn-primary p-2 rounded-full grid place-items-center' do %>
         <%= inline_svg_tag 'icons/check.svg', class: 'size-6' %>
