--- a/app/views/messages/cancel_edit.turbo_stream.erb
+++ b/app/views/messages/cancel_edit.turbo_stream.erb
@@ -1,3 +1,7 @@
 <%= turbo_stream.replace (@pin ? "pinned_#{dom_id(@message)}" : dom_id(@message)) do %>
   <%= render (@pin ? 'pinned_message' : @message), message: @message %>
 <% end %>
+
+<%= turbo_stream.replace 'new_message_form' do %>
+  <%= render 'form', message: Message.new(topic: @topic) %>
+<% end %>
