--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,20 +1,23 @@
-<% content_for :title, "#{@team.name} - #{@topic.title}" %>
+<% content_for :title, "#{@team.name} • #{@topic.title}" %>
+
+<%= turbo_stream_from "user_#{current_user.id}_topic_#{@topic.id}", data: { controller: 'topic-reader', topic_reader_update_last_read_path_value: update_last_read_team_topic_path(@team, @topic) } %>
+
 <div data-controller="reply-message" class="max-w-3xl mx-auto mt-16 mb-80 md:mb-16">
   <div class="mb-6 border-b border-slate-200 dark:border-slate-700 sticky top-0 bg-slate-50 dark:bg-slate-900">
-    <%= link_to team_topics_path(@team), class: 'group flex items-center gap-3 pt-4 pb-2 pr-2 btn-link-soft w-max', aria: { label: "Back to #{@team.name} topics" } do %>
-      <%= inline_svg_tag 'icons/chevron-left-bold.svg', class: 'size-4 transition ease-in-out duration-200' %>
+    <div class="flex items-center justify-between">
+      <%= link_to team_topics_path(@team), class: 'group flex items-center gap-3 pt-4 pb-2 pr-2 btn-link-soft w-max', aria: { label: "Back to #{@team.name} topics" } do %>
+        <%= inline_svg_tag 'icons/chevron-left-bold.svg', class: 'size-4 transition ease-in-out duration-200' %>
+        <div>
+          <p class="font-bold text-normal group-hover:text-soft transition ease-in-out duration-200"><%= @topic.title %></p>
+          <p class="text-xs transition ease-in-out duration-200">Back to topics</p>
+        </div>
+      <% end %>
+      <button type="button" onclick="window.location.reload()" class="p-[5px] rounded-lg transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50">
+        <%= inline_svg_tag 'icons/reload.svg', class: 'size-4' %>
+      </button>
+    </div>
 
-      <div>
-        <p class="font-bold text-normal group-hover:text-soft transition ease-in-out duration-200"><%= @topic.title %></p>
-        <p class="text-xs transition ease-in-out duration-200">Back to topics</p>
-      </div>
-    <% end %>
-
-    <% if @pinned_message.present? %>
-      <%= render 'pinned_message', message: @pinned_message %>
-    <% else %>
-      <div id="pinned_message"></div>
-    <% end %>
+    <%= render 'pinned_message', message: @pinned_message.presence %>
   </div>
   <div id="messages" class="mb-6">
     <% @messages.each do |message| %>
@@ -36,16 +39,3 @@
     <% end %>
   </div>
 </div>
-
-<script>
-  window.onload = () => {
-    document.addEventListener('keydown', function(event) {
-      const textarea = document.getElementById('message_content');
-
-      if (document.activeElement === textarea && (event.ctrlKey || event.metaKey) && event.key === 'Enter') {
-        event.preventDefault(); // Prevents default behavior like adding a new line
-        document.getElementById('messageForm').submit();
-      }
-    });
-  };
-</script>
