refactor: simplify team buttons and rename to `_join_button.html.erb`

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -13,7 +13,7 @@
 
     <%= simple_format @team.description, class: 'text-soft text-sm md:max-w-[80%] md:mx-auto text-pretty' unless @team.description.blank? %>
 
-    <div class="flex items-center justify-between mt-4">
+    <div class="flex items-center <%= current_user.member_of?(@team) ? 'justify-between' : 'justify-center' %> mt-4">
       <%= link_to 'Team Chat', team_topics_path(@team), class: 'btn btn-primary btn-muted' if current_user.member_of?(@team) %>
 
       <% if @current_user_member_of_team || @current_user_owns_team %>
@@ -55,7 +55,7 @@
           <%= render 'teams/shared/leave_team_modal', team: @team if @current_user_member_of_team && !@current_user_owns_team %>
         </div>
       <% else %>
-        <%= render 'teams/shared/team_buttons', team: @team %>
+        <%= render 'teams/shared/join_button', team: @team %>
       <% end %>
     </div>
   </div>
