--- a/app/views/runs/_run.html.erb
+++ b/app/views/runs/_run.html.erb
@@ -78,10 +78,10 @@
 
     <div class="max-lg:space-y-2 lg:flex items-center justify-between pt-4 border-t dark:border-slate-700">
       <div class="flex items-center gap-2 text-soft text-xs">
-        <time class="whitespace-nowrap" datetime="<%= run.created_at.to_formatted_s(:long) %>">Posted: <%= format_date(run.created_at) %></time>
+        <time class="whitespace-nowrap" datetime="<%= run.created_at.to_formatted_s(:long) %>"><span class="font-semibold">Posted</span> <%= format_date(run.created_at) %></time>
         <% if run.edited? %>
           <span>•</span>
-          <time class="whitespace-nowrap" datetime="<%= run.updated_at.to_formatted_s(:long) %>">Edited: <%= format_date(run.updated_at) %></time>
+          <time class="whitespace-nowrap" datetime="<%= run.updated_at.to_formatted_s(:long) %>"><span class="font-semibold">Edited</span> <%= format_date(run.updated_at) %></time>
         <% end %>
       </div>
 
