--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -41,7 +41,7 @@
         <%= render 'topic_banner', topic: object %>
       <% elsif object.is_a?(TeamMembership) %>
         <div class="flex justify-center">
-          <p class="text-light text-sm text-center my-1 rounded-full bg-slate-200/50 dark:bg-slate-700/50 pl-3 pr-4 py-1 w-max"><%= object.user.default_name %> joined the team!</p>
+          <p class="text-soft text-sm text-center my-1"><%= object.user.default_name %> joined the team!</p>
         </div>
       <% end %>
     <% end %>
