--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,7 +5,7 @@
 <div data-controller="reply-message" class="max-w-3xl mx-auto mt-16 mb-80 md:mb-16">
   <div class="mb-6 border-b border-slate-200 dark:border-slate-700 sticky top-0 bg-slate-50 dark:bg-slate-900">
     <div class="flex items-center justify-between">
-      <%= link_to team_topics_path(@team), class: 'group flex items-center gap-3 pt-4 pb-2 pr-2 btn-link-soft w-max', aria: { label: "Back to #{@team.name} topics" } do %>
+      <%= link_to team_topics_path(@team), class: 'group flex items-center gap-4 pt-4 pb-2 pr-2 btn-link-soft w-max', aria: { label: "Back to #{@team.name} topics" } do %>
         <%= inline_svg_tag 'icons/chevron-left-bold.svg', class: 'size-4 transition ease-in-out duration-200' %>
         <div>
           <p class="font-bold text-normal group-hover:text-soft transition ease-in-out duration-200"><%= @topic.title %></p>
@@ -14,38 +14,28 @@
       <% end %>
       <button type="button" onclick="window.location.reload()" class="p-[5px] rounded-lg transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50">
         <%= inline_svg_tag 'icons/reload.svg', class: 'size-4' %>
+        <span class="sr-only">Refresh page</span>
       </button>
     </div>
 
     <%= render 'pinned_message', message: @pinned_message.presence %>
   </div>
-  <div id="messages" class="mb-6">
-    <% last_message_date = nil %>
 
-    <% @objects.each do |object| %>
-      <% if last_message_date != object.created_at.to_date %>
-        <div class="text-soft text-sm text-center mt-8 mb-4">
-          <%= pretty_date(object.created_at, date_style: :relative, include_weekday: true, weekday_format: :short, month_format: :short, include_year: object.created_at.year != Time.current.year) %>
+  <div data-controller="pagination" data-pagination-load-more-path-value="<%= load_more_team_topic_messages_path(@team, @topic) %>">
+    <% if @more_messages %>
+      <div class="flex justify-center my-3">
+        <button data-pagination-target="button" class="btn btn-sm btn-white gap-2" data-action="click->pagination#loadMore">Load more</button>
+        <div data-pagination-target="spinner" class="hidden">
+          <%= inline_svg_tag 'icons/spinner.svg', class: 'size-6 animate-spin' %>
         </div>
-
-        <% last_message_date = object.created_at.to_date %>
-      <% end %>
-
-      <% if object.is_a?(Message) %>
-        <% if object.deleted? %>
-            <%= render 'deleted_message', message: object %>
-        <% else %>
-          <%= render object %>
-        <% end %>
-      <% elsif object.is_a?(Topic) %>
-        <%= render 'topic_banner', topic: object %>
-      <% elsif object.is_a?(TeamMembership) %>
-        <div class="flex justify-center">
-          <p class="text-soft text-sm text-center my-1"><%= object.user.default_name %> joined the team!</p>
-        </div>
-      <% end %>
+      </div>
     <% end %>
+
+    <div id="messages" class="mb-6" data-pagination-target="messages" data-oldest-timestamp="<%= @oldest_timestamp %>">
+      <%= render 'messages_list', objects: @objects %>
+    </div>
   </div>
+
   <div>
     <% if @topic.open? %>
       <%= render 'form', message: Message.new(topic: @topic) %>
