--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,3 +1,4 @@
+<% details_view = local_assigns.fetch(:details_view, false) %>
 <% show_parent = local_assigns.fetch(:show_parent, true) %>
 <% link = local_assigns.fetch(:link, true) %>
 
@@ -13,8 +14,8 @@
   <div class="flex <%= message.pinned? ? 'mt-3' : 'mt-1' %> <%= user == current_user ? 'ml-20 sm:ml-24 md:ml-28 justify-end' : 'mr-20 sm:mr-24 md:mr-28' %>">
     <div class="relative">
       <% if parent.present? && show_parent %>
-        <div data-scroll-target-id="<%= dom_id(parent) %>_bubble" data-action="click->scroll#scrollToTarget" class="pointer-events-auto relative top-3 z-0 cursor-pointer">
-          <div class="inline-flex gap-1 mt-2 <%= parent.deleted? ? 'text-red-600 dark:text-red-300' : 'text-soft' %>">
+        <div data-scroll-target-id="<%= dom_id(parent) %>_bubble" data-action="click->scroll#scrollToTarget" class="pointer-events-auto relative top-3 z-0 <%= details_view ? '' : 'cursor-pointer' %>">
+          <div class="inline-flex gap-1 mt-2 <%= parent.deleted? ? 'text-red-600 dark:text-red-300' : details_view ? 'text-light' : 'text-soft' %>">
             <%= inline_svg_tag 'icons/reply.svg', class: 'size-3.5' %>
             <span class="text-xs">
               <% if user == current_user %>
@@ -24,7 +25,7 @@
               <% end %>
             </span>
           </div>
-          <p class="text-xs p-2 pb-4 sm:pb-5 rounded-t-2xl <%= parent.deleted? ? 'text-red-600 dark:text-red-300 border border-red-300 bg-red-50 dark:border-red-900 dark:bg-red-950/80' : 'text-light bg-slate-200/60 dark:bg-slate-800 border border-slate-300 dark:border-slate-700' %>">
+          <p class="text-xs p-2 pb-4 sm:pb-5 rounded-t-2xl <%= parent.deleted? ? 'text-red-600 dark:text-red-300 border border-red-300 bg-red-50 dark:border-red-900 dark:bg-red-950/80' : details_view ? 'text-normal bg-slate-300/60 dark:bg-slate-700/60 border border-slate-400 dark:border-slate-600' : 'text-light bg-slate-200/60 dark:bg-slate-800 border border-slate-300 dark:border-slate-700' %>">
             <%= truncate(parent.content, length: 100) %>
           </p>
         </div>
